# SCPC

./: README.md  pyproject.toml
src/SCPC/: sample_packets.kdl
src/SCPC/util/: PACKETS.md  data_types.py  packets.py
