[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SCPC"
version = "0.0.0"
dependencies = ["kdl-py==1.2.0"]
packages = ["res", "src/util"]

authors = [
  {name = "Lascode", email = "lascode@maketail.dev"},
]
description = "Simple Chat Packet Codec"
readme = "README.md"

license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]


